Add firebase authentification

--- a/main.html
+++ b/main.html
@@ -14,9 +14,7 @@
 </head>
 
 <body>
-    <h1>Welcome to EcoBus. Please log in to continue.</h1>
-    <button type="button" class="btn btn-primary" id="login-button">Log in/Sign up</button>
-    <!-- Our own scripts -->
+    <h1>You're logged in!</h1>
     <script src="scripts/index.js"></script>
 </body>
 
