--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoBus</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="images/favicon-32x32.png">
     <!-- Our own styles -->
     <link rel="stylesheet" href="styles/index.css">
     <!-- Bootstrap -->
