--- a/login.html
+++ b/login.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="images/favicon-32x32.png">
+
     <!-- Our own styles -->
     <link rel="stylesheet" href="styles/index.css">
     
