--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon-32x32.png">
 
     <!-- Our own styles -->
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/login.css">
     
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,7 +22,9 @@
 </head>
 
 <body>
-    <div id="firebaseui-auth-container"></div>
+    <div id="firebaseui-auth-container">
+        <h1>Log in</h1>
+    </div>
     <div id="loader">Loading...</div>
 
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
