--- a/search-page/search.html
+++ b/search-page/search.html
@@ -62,7 +62,7 @@
                 <li>Some data</li>
                 <li>Some data</li>
             </ul>
-            <button class="save-journey-button">SAVE THIS JOURNEY</button>
+            <button class="save-journey-button" id="save-transit-journey">SAVE THIS JOURNEY</button>
         </div>
     </section>
 
@@ -77,17 +77,17 @@
                 <li>Some data</li>
                 <li>Some data</li>
             </ul>
-            <button class="save-journey-button">SAVE THIS JOURNEY</button>
+            <button class="save-journey-button" id="save-driving-journey">SAVE THIS JOURNEY</button>
         </div>
         </section>
 
-    <section class="search-process-container journey-saved-container" id="transit-option-journey-saved-container">
+    <section class="search-process-container journey-saved-container" id="transit-journey-saved-container">
         <p>Your journey has been saved!</p>
         <p>You saved <span>0000</span> kilograms of C02 by taking public transporation!</p>
         <p>Thank you for being eco-friendly.</p>
     </section>
 
-    <section class="search-process-container journey-saved-container" id="driving-option-journey-saved-container">
+    <section class="search-process-container journey-saved-container" id="driving-journey-saved-container">
         <p>Your journey has been saved!</p>
         <p>You could have saved <span>0000</span> kilograms of C02 by taking public transporation.</p>
         <p>Consider taking public transporation on your next journey!</p>
