--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
   <meta property="og:type" content="application" />
   <meta property="og:title" content="Ecobus" />
   <meta property="og:description" content="I take public transportation!" />
-  <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+  <meta property="og:image" content="./logo512.png" />
+  <meta property="fb:app_id" content="4216578438405212" />
+
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
