--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <meta property="og:url" content="https://ecobus-189e8.web.app/#/" />
-  <meta property="og:type" content="application" />
-  <meta property="og:title" content="Ecobus" />
-  <meta property="og:description" content="I take public transportation!" />
-  <meta property="og:image" content="./logo512.png" />
-  <meta property="fb:app_id" content="4216578438405212" />
-<<<<<<< HEAD
-
-=======
->>>>>>> dev
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
